# nethercore-ai-plugins

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GAPS.md  LICENSE-APACHE  LICENSE-MIT  OPTIMIZATION-PLAN.md  PARSER_ROADMAP.md  PARSER_ROADMAP_DONE.md  README.md  clear-cache.bat  clear-cache.sh  pyproject.toml  requirements-core.txt
.claude-plugin/: marketplace.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
ai-game-studio/: plugin.json
ai_studio_core/: cli.py  config.py  legacy_studio.py  lint_repo.py  project_init.py
ai_studio_core/specs/: io.py  (+2 more)
creative-direction/: README.md
docs/: README.md  ROADMAP_CORE_SPLIT.md  SPEC_REFERENCE.md  audio-pipeline.md
game-design/: README.md
missing-modules/: 00-CRITICAL-ANALYSIS.md  LEAN-01-nethercore-zx-test.md  LEAN-02-nethercore-zx-optimize.md  LEAN-03-nethercore-zx-cicd.md  LEAN-04-existing-consolidation.md  README.md
nethercore/: INDEX.md  README.md
nethercore-zx-cicd/: README.md
nethercore-zx-dev/: README.md  plugin.json
nethercore-zx-game-design/: README.md
nethercore-zx-optimize/: README.md
nethercore-zx-orchestrator/: README.md
nethercore-zx-procgen/: README.md  plugin.json
nethercore-zx-publish/: README.md
nethercore-zx-test/: README.md
scripts/: lint_repo.py
sound-design/: README.md
todo/: INDEX.md
tracker-music/: README.md
zx/: INDEX.md  README.md
zx-cicd/: README.md
zx-dev/: README.md
zx-game-design/: README.md
zx-optimize/: README.md
zx-orchestrator/: README.md
zx-procgen/: PARSER_ROADMAP.md  README.md
zx-publish/: README.md
zx-test/: README.md
(+706 files in other folders)
