[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-studio-core"
version = "0.1.0"
description = "Stable core CLI and library for an AI asset studio."
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
dependencies = ["pydantic>=2.0,<3", "tomli>=2.0.0; python_version < '3.11'"]

[project.scripts]
ai-studio = "ai_studio_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_studio_core*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ai_studio_core = ["templates/**/*"]
